Refactored password reset logic and components.

--- a/src/main/resources/mail-templates/password-reset-template.html
+++ b/src/main/resources/mail-templates/password-reset-template.html
@@ -18,8 +18,7 @@
         <td style="background-color: #ffffff; padding: 40px 30px 40px 30px; text-align: center">
             <h3>Hello <span th:text="${fullName}" th:remove="tag"></span>!</h3>
             <p>We have received a request to reset the password for your account.</p>
-            <p>To reset your password, follow this link : </p>
-            <a th:href="@{${resetUrl}}">confirm reset</a>
+            <p>Your password reset code : <span th:text="${passwordResetCode}" th:remove="tag"></span></p>
         </td>
     </tr>
 </table>
