Added twitter icon and description to public index.html. Added follower request endpoints and service methods. Added follower request to redux state: user, users and userProfile. Fixed UserPage, ConversationInfo, UsersItem, PopperUserWindow, Follower. Added FollowerRequestsModal and FollowerRequestsItem to SideMenu.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/twitter.2.ico" />
+    <link rel="shortcut icon" href="https://abs.twimg.com/favicons/twitter.2.ico">
+    <link rel="mask-icon" sizes="any" href="https://abs.twimg.com/responsive-web/client-web/icon-svg.168b89d5.svg" color="#1D9BF0">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Twitter clone"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Twitter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
